# CO658WBL-Assignment

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/: BPlusTree.hpp  Database.hpp  Ingredient.hpp  defaultConfig.hpp
app/include/database/: BPlusTree.hpp  BipartiteGraphDatabase.hpp  DatabaseFile.hpp  Internal.hpp  Leaf.hpp  Node.hpp  RecipeDatabase.hpp
app/include/database/b_plus_tree/: BPlusTree.hpp  DiskBackedInternalNode.hpp  DiskBackedNode.hpp  Internal.hpp  Leaf.hpp  Node.hpp
app/include/database/file/: AddressCache.hpp  BPlusSection.hpp  DatabaseFileManager.hpp  FileBackedBPlusTree.hpp  Header.hpp  LazyNode.hpp  PullThroughCache.hpp
app/include/database/file/data/: DataChunk.hpp  DataFile.hpp  DataMetadata.hpp  LazyDataChunk.hpp
app/include/database/file/index/: IndexFile.hpp  IndexMetadata.hpp
app/include/database/file/parsing/: Address.hpp  baseParsers.hpp  base_parsers.hpp  common.hpp  deserialize.hpp  serialize.hpp
app/include/database/file/tree/: FileBackedInternal.hpp  FileBackedLeaf.hpp  FileBackedNode.hpp  LazyNode.hpp  friends.hpp  nodeParser.hpp  parser.hpp  types.hpp
app/include/model/: Ingredient.hpp  Recipe.hpp
app/include/utils/: bitwise.hpp  string.hpp  templating.hpp
app/src/: Database.cpp  Ingredient.cpp  benchmark.cpp  main.cpp  migrate.cpp
app/src/database/file/: BPlusSection.cpp  Header.cpp
app/src/model/: Recipe.cpp
app/test/: BPlusTreeTest.cpp
app/test/database/: BPlusTreeTest.cpp
app/test/database/b_plus_tree/: BPlusTreeTest.cpp
app/test/database/file/: FileBackedBPlusTreeTest.cpp
(+9 files in other folders)
